<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.thedramaticcolumnist.app.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_cart"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:destination="@id/cart" />
        <action
            android:id="@+id/home_to_CategoryProducts"
            app:destination="@id/viewCategoryProducts"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/home_to_search"
            app:destination="@id/search2"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/home_to_productDetail"
            app:destination="@id/productDetail"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_order"
        android:name="com.thedramaticcolumnist.app.ui.Order.OrderFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/order_fragment">
        <action
            android:id="@+id/order_to_orderDetail"
            app:destination="@id/orderDetail"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.thedramaticcolumnist.app.ui.WishList.WishlistFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/wishlist_fragment" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.thedramaticcolumnist.app.ui.YourAccount.YourAccount"
        android:label="@string/menu_account"
        tools:layout="@layout/your_account_fragment">
        <action
            android:id="@+id/account_to_address"
            app:destination="@id/address2"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/account_to_wishlist"
            app:destination="@id/nav_wishlist"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/account_to_nav_order"
            app:destination="@id/nav_order"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/nav_category"
        android:name="com.thedramaticcolumnist.app.ui.Category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/category_fragment">
        <action
            android:id="@+id/action_nav_category_to_viewCategoryProducts"
            app:destination="@id/viewCategoryProducts"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/nav_products"
        android:name="com.thedramaticcolumnist.app.ui.Products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/products_fragment">
        <action
            android:id="@+id/products_to_productDetail"
            app:destination="@id/productDetail"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/cart"
        android:name="com.thedramaticcolumnist.app.ui.Cart.Cart"
        android:label="Cart"
        tools:layout="@layout/cart">
        <action
            android:id="@+id/cart_to_address"
            app:destination="@id/address2"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/productDetail"
        android:name="com.thedramaticcolumnist.app.ui.Products.ViewProduct.ProductDetail"
        android:label="Product Detail"
        tools:layout="@layout/product_detail">
        <argument
            android:name="productID"
            app:argType="string" />
        <action
            android:id="@+id/productDetail_to_address"
            app:destination="@id/address2"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/productDetail_to_cart"
            app:destination="@id/cart"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/viewCategoryProducts"
        android:name="com.thedramaticcolumnist.app.ui.ViewCategoryProducts.ViewCategoryProducts"
        android:label=" "
        tools:layout="@layout/view_category_products">
        <argument
            android:name="category"
            app:argType="string" />
        <action
            android:id="@+id/action_viewCategoryProducts_to_productDetail"
            app:destination="@id/productDetail"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/search2"
        android:name="com.thedramaticcolumnist.app.ui.Search.Search"
        android:label="Search"
        tools:layout="@layout/search">
        <action
            android:id="@+id/search_to_productDetail"
            app:destination="@id/productDetail"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/address2"
        android:name="com.thedramaticcolumnist.app.ui.address.Address"
        android:label="Select a address"
        tools:layout="@layout/address">
        <action
            android:id="@+id/address_to_confirmOrder"
            app:destination="@id/confirmOrder"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/confirmOrder"
        android:name="com.thedramaticcolumnist.app.ui.ConfirmOrder.ConfirmOrder"
        android:label="Confirm Order"
        tools:layout="@layout/confirm_order">
        <argument
            android:name="addressID"
            app:argType="string" />
        <action
            android:id="@+id/confirmOrder_to_home"
            app:destination="@id/nav_home"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/orderDetail"
        android:name="com.thedramaticcolumnist.app.ui.orderDetail.OrderDetail"
        android:label="Order Details"
        tools:layout="@layout/order_detail">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>